--- a/Demonstration.ipynb
+++ b/Demonstration.ipynb
@@ -80,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploring Data"
+    "### Exploring/Cleaning Data"
    ]
   },
   {
